--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "version": "1.1",
-    "name": "LearningJS",
+    "name": "Tab Storage",
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.jpg"
